
  - Some CLI modes don't accept "." as project path
  https://sourceforge.net/p/omegat/bugs/830/

  Localisation Updates:

  - Interlingua localisation updated to 4.0 (UI, documentation, readme, scripts)

----------------------------------------------------------------------
 OmegaT 3.6.0 update 7
----------------------------------------------------------------------
  0 Enhancement
  1 Bug fix
  0 Localisation update
----------------------------------------------------------------------
3.6.0 update 7 vs 3.6.0 update 6

  Bug fixes:

  - Extra tags not recognised by tag validation 
  https://sourceforge.net/p/omegat/bugs/876/

----------------------------------------------------------------------
 OmegaT 3.6.0 update 6
----------------------------------------------------------------------
  0 Enhancement
  3 Bug fixes
  0 Localisation update
----------------------------------------------------------------------
3.6.0 update 6 vs 3.6.0 update 5

  Bug fixes:

  - When there were no LanguageTool rules for the source or the target
language of the project, the QA - Check Rules script was crashing

  - MyMemory (machine) wouldn't find the correct translation if the
target language contained a non default country code (e.g., FR-CA
instead of FR-FR)

  - Some text was ignored in Inkscape's SVG export

----------------------------------------------------------------------
 OmegaT 3.6.0 update 5 (2017-03-09)
----------------------------------------------------------------------
  1 Enhancement
  4 Bug fixes
  0 Localisation update
----------------------------------------------------------------------
3.6.0 update 5 vs 3.6.0 update 4

  Implemented requests:

  - Make OmegaT available via Homebrew on macOS
  https://sourceforge.net/p/omegat/feature-requests/1305/

  Bug fixes:

  - DocBook XML filter ignores some content
  https://sourceforge.net/p/omegat/bugs/844/

  - XML Spreadsheet format: the OfficeDocumentSettings tag is not
ignored
